[gd_scene load_steps=13 format=4]

[ext_resource type="Script" path="res://objects/volcano/bob_omb/bob_omb.gd" id="1"]
[ext_resource type="Script" path="res://engine/objects/enemies/enemy_body_collision.gd" id="2"]
[ext_resource type="Script" path="res://engine/scripts/nodes/enemies/enemy_attacked.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://46ern2rknx3i" path="res://engine/objects/enemies/_sounds/stomp.wav" id="4"]
[ext_resource type="PackedScene" uid="uid://oe7i3cief0g" path="res://engine/objects/enemies/_dead/enemy_killed.tscn" id="5"]
[ext_resource type="Script" path="res://engine/objects/enemies/_dead/prefabs/do_killed.gd" id="6"]
[ext_resource type="Script" path="res://engine/scripts/resources/instance_node2d/instance_node2d.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://be3uvqev2c1p6" path="res://engine/objects/players/prefabs/sounds/kick.wav" id="8"]
[ext_resource type="SpriteFrames" uid="uid://bd62238t5jg0x" path="res://objects/volcano/bob_omb/bob_omb.tres" id="9"]
[ext_resource type="Script" path="res://engine/scripts/nodes/vision/vision.gd" id="10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmo40"]
size = Vector2(30, 28)

[sub_resource type="Resource" id="Resource_saatd"]
script = ExtResource("7")
resource_local_to_scene = true
creation_nodepack = ExtResource("5")
trans_offset = Vector2(0, 0)
trans_inheritances = 7
trans_rotation = 0.0
trans_scale = Vector2(1, 1)
trans_skew = 0.0
visi_z_index = 1
visi_z_as_relative = true
visi_y_sort_enabled = false
custom_vars = {
"death": NodePath("../../AnimatedSprite2D"),
"death_speed": Vector2(0, -250)
}
custom_script = ExtResource("6")

[node name="BobOmb" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 32
floor_max_angle = 0.8377580046653748
floor_snap_length = 16.0
script = ExtResource("1")
look_at_player = true
sprite = NodePath("AnimatedSprite2D")
speed = Vector2(50, 0)
gravity_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_rmo40")

[node name="Body" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 7
script = ExtResource("2")

[node name="Collision" type="CollisionShape2D" parent="Body"]
visible = false
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_rmo40")

[node name="EnemyAttacked" type="Node" parent="Body"]
script = ExtResource("3")
stomping_scores = 100
stomping_sound = ExtResource("4")
killing_immune = {
"beetroot": false,
"boomerang": false,
"fireball": true,
"hammer": false,
"head": false,
"iceball": false,
"shell": false,
"shell_defence": 0,
"shell_forced": false,
"starman": false
}
killing_creation = SubResource("Resource_saatd")
killing_scores = 100
killing_sound_succeeded = ExtResource("8")
killing_sound_failed = ExtResource("8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("9")
autoplay = "default"

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
self_modulate = Color(1, 1, 1, 0.01960779912769794)
rect = Rect2(-16, -16, 32, 32)
script = ExtResource("10")
metadata/_edit_lock_ = true

[connection signal="collided_wall" from="." to="." method="turn_x"]
[connection signal="body_entered" from="Body" to="." method="_on_body_entered"]
[connection signal="killed_failed" from="Body/EnemyAttacked" to="." method="fired"]
[connection signal="killed_succeeded" from="Body/EnemyAttacked" to="." method="queue_free"]
[connection signal="killed_succeeded" from="Body/EnemyAttacked" to="AnimatedSprite2D" method="set_animation" binds= [&"stomped"]]
[connection signal="stomped_succeeded" from="Body/EnemyAttacked" to="." method="set_ignited" binds= [true]]
